Update api-test.yml to use java jar

--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -19,13 +19,18 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Grant execute permission for Gradlew
+        run: chmod +x ./gradlew
+
       - name: Build and Run Application
-        run: ./gradlew bootRun
+        run: |
+          ./gradlew clean build
+          java -jar build/libs/ecommerce-0.0.1-SNAPSHOT.jar
 
       - name: Wait for Application to Start
         run: |
           echo "Waiting for Spring Boot application to start..."
-          sleep 20
+          sleep 30
 
       - name: Setup NodeJS
         uses: actions/setup-node@v4
